# rag-api-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_handbook.py  generate_hr_handbook.py  generate_security_pdf.py  plan.md  pyproject.toml  requirements.txt  test_results.json
.github/workflows/: azure-webapp.yml
app/: __init__.py  config.py  main.py  models.py
app/agent/: __init__.py  core.py  memory.py  prompts.py  router.py  tools.py
app/api/: routes.py
app/rag/: __init__.py  embeddings.py  indexer.py  retriever.py
data/faiss_index/: index.faiss  index.pkl
documents/: generate_expense_policy.py
scripts/: generate_pdfs.py  generate_pdfs_simple.py  index_documents.py
tests/: __init__.py  test_api_models_contract.py  test_core_tools.py  test_dynamic_behavior.py  test_memory.py  test_retriever.py  test_router.py
