[tool.poetry]
name = "ai-agent-rag-system"
version = "0.1.0"
description = "AI Agent with RAG capabilities for corporate policy questions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^1.0.0"
langchain-community = "^0.4.0"
langchain-groq = "^1.1.2"
langchain-text-splitters = "^1.1.1"
faiss-cpu = "^1.8.0"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
sentence-transformers = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
httpx = "^0.26.0"
pre-commit = "^3.6.0"

[tool.poetry.group.docs.dependencies]
reportlab = "^4.0.9"
weasyprint = "^60.2"
fpdf2 = "^2.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term"
